prover-ray/zkcdriver/testdata/synced/invalid/switch_duplicate_label_01.zkc
//error:17:18-23:duplicate label in switch statement

// ================
// duplicate label
// ================

type exmp = u8

const CASE_A     :exmp = 1
const CASE_MATCH :exmp = 13

fn main() {

  var discr :exmp = CASE_MATCH

  switch discr {
    case CASE_A, CASE_A: { }
  }
}
